<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="org.telnyx.webrtc.xmlapp.org.telnyx.webrtc.xml_app.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/callTypeSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:singleSelection="true"
                app:checkedButton="@id/sipAddressToggle"
                app:selectionRequired="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sipAddressToggle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sip_address_toggle"
                    style="@style/ToggleButton"
                    app:backgroundTint="@color/main_green"
                    android:textColor="@color/white"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/phoneNumberToggle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/phone_number_toggle"
                    style="@style/ToggleButton"
                    app:backgroundTint="@color/white"
                    android:textColor="@color/black"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>


            <LinearLayout
                android:id="@+id/destinationInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/callTypeSwitch">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usernameTextFieldLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/callInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/callIdleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_normal"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/call"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/answer_green"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/baseline_call_24"
                        app:iconTint="@color/black" />

                </LinearLayout>

                <Button
                    android:id="@+id/assistantDialButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_18dp"
                    android:text="@string/assistant_dial_button"
                    android:textAllCaps="false"
                    android:paddingStart="@dimen/spacing_tiny"
                    android:paddingEnd="@dimen/spacing_tiny"
                    style="@style/CustomOutlinedButton"
                    android:textSize="@dimen/font_button"
                    android:visibility="gone"
                    />

                <Button
                    android:id="@+id/callHistoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/spacing_medium"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:text="@string/call_history_title"
                    android:textAllCaps="false"
                    android:paddingStart="@dimen/spacing_tiny"
                    android:paddingEnd="@dimen/spacing_tiny"
                    style="@style/CustomOutlinedButton"
                    android:textSize="@dimen/font_button"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/callActiveView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_normal"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
                android:visibility="gone">

                <!-- Call Quality Summary - New UI -->
                <include
                    android:id="@+id/call_quality_summary"
                    layout="@layout/call_quality_summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_tiny"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/mute"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/mute_24"
                        />

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/loudSpeaker"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/speaker_off_24"
                        />

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/hold"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/pause_24"
                        />

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/dialpad"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/dialpad_24"
                        />

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/assistantTranscript"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/colorSecondary"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/ic_message"
                        android:visibility="gone"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        style="@style/IconControlButton"
                        android:id="@+id/endCall"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/reject_red"
                        android:contentDescription="@string/fab_transformation_scrim_behavior"
                        app:icon="@drawable/baseline_call_reject_24"
                        app:iconTint="@color/white"
                        />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/callIncomingView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_tiny"
                android:layout_marginTop="@dimen/spacing_normal"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/destinationInfo"
                android:visibility="gone">

                <Button
                    style="@style/IconControlButton"
                    android:id="@+id/callReject"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/reject_red"
                    android:contentDescription="@string/fab_transformation_scrim_behavior"
                    app:icon="@drawable/baseline_call_reject_24"
                    app:iconTint="@color/black"
                    android:layout_marginEnd="20dp"
                    />

                <Button
                    style="@style/IconControlButton"
                    android:id="@+id/callAnswer"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/answer_green"
                    android:contentDescription="@string/fab_transformation_scrim_behavior"
                    app:icon="@drawable/baseline_call_24"
                    app:iconTint="@color/black"
                    android:layout_marginStart="20dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
