<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/credentialsLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/sessionSwitchLayout"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sessionSwitch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/spacing_tiny"
            android:text=" "
            android:textOn=" "
            android:textOff=" "
          />

        <TextView
            android:id="@+id/loginType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SubText"
            android:text="@string/token_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/sessionSwitchLayout">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/credentialGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="usernameTextFieldLayout,passwordTextFieldLayout"
            android:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameTextFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:hint="@string/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/spacing_tiny"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextFieldLayout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextField"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tokenTextFieldLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/token"
            android:visibility="gone"
            android:layout_marginTop="@dimen/spacing_tiny"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tokenTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/callerIdNameTextFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:hint="@string/caller_id_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/loginInfo"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/callerIdNameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/callerIdNumberTextFieldLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caller_id_number"
        android:layout_marginTop="@dimen/spacing_tiny"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/callerIdNameTextFieldLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/callerIdNumberTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/confirm"
        android:layout_marginTop="@dimen/spacing_medium"
        android:textSize="12sp"
        android:textAllCaps="false"
        style="@style/CustomPrimaryButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="@dimen/spacing_tiny"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="12sp"
        style="@style/CustomOutlinedButton"
        app:layout_constraintStart_toEndOf="@+id/confirmButton"
        app:layout_constraintTop_toBottomOf="@+id/callerIdNumberTextFieldLayout" />




</androidx.constraintlayout.widget.ConstraintLayout>