<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/spacing_normal">


    <RelativeLayout
        android:id="@+id/headerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/existingProfiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HeaderTextLarge"
            android:text="@string/existing_profiles" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/close_button_dessc"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/existingProfiles"
            android:layout_alignBottom="@id/existingProfiles"/>

        <Button
            android:id="@+id/addNewProfile"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/add_new_profile"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/spacing_medium"
            app:icon="@drawable/ic_add"
            style="@style/AddProfileButton"
            android:layout_alignParentStart="true"
            android:layout_below="@id/existingProfiles" />

        <TextView
            android:id="@+id/productionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/production_label"
            style="@style/SubText"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_alignParentStart="true"
            android:layout_below="@id/addNewProfile"/>

    </RelativeLayout>

    <include
        android:id="@+id/credentialGroup"
        layout="@layout/credentials_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/headerInfo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/allProfiles"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/headerInfo"/>

    <Button
        android:id="@+id/profileConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:text="@string/confirm"
        android:layout_marginTop="@dimen/spacing_medium"
        android:textSize="12sp"
        android:textAllCaps="false"
        style="@style/CustomPrimaryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/profileCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginEnd="@dimen/spacing_tiny"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="12sp"
        style="@style/CustomOutlinedButton"
        app:layout_constraintEnd_toStartOf="@+id/profileConfirmButton"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>



