...
            android:layout_height="wrap_content"
            style="@style/HeaderTextLarge"
            android:text="@string/dtmf_dialpad" />


        <ImageView
            android:id="@+id/close"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:contentDescription="@string/close_button_dessc"
            android:src="@drawable/ic_close"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/dialpadOutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerInfo"
        android:layout_marginTop="@dimen/spacing_normal"/>
...
